# rtcom-eventlogger-ui

./: Makefile.am  autogen.sh  configure.ac  rtcom-eventlogger-ui.pc.in
debian/: README  changelog  control  copyright  rules
example/: Makefile.am  example.c
rtcom-eventlogger-ui/: rtcom-log-columns.h  rtcom-log-model.h  rtcom-log-search-bar.h  rtcom-log-view.h
src/: Makefile.am  rtcom-log-model.c  rtcom-log-search-bar.c  rtcom-log-view.c  utf8.c
